--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href ="style.css"
+
 </head>
 
 
 <body>
-    <script src="app.js"> </script>
-        
+   <button id ="rock" type= "button"> Rock</button>
+   <button id ="paper" type= "button"> Paper</button>
+   <button id ="scissors" type= "button"> Scissors</button>
+
+  <div class = "label">
+      <p id ="result">
+
+      </p>
+  </div>
 </body>
+<script src="app.js"> </script>
 </html>
