app.js and index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
    <button id ="rock" type= "button"> Rock</button>
    <button id ="paper" type= "button"> Paper</button>
    <button id ="scissors" type= "button"> Scissors</button>
+<div class ="gameChoice">
+   
 
   <div class = "label">
       <p id ="result">
 
       </p>
+       <div id="records"></div>
+
+      </div>
   </div>
 </body>
 <script src="app.js"> </script>
